[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "repomix-attribution"
version = "1.1.0"
description = "Compute byte attribution of files in a repomix output by include-pattern category"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Chau Vu", email = "chauv@example.com"}]
keywords = ["repomix", "attribution", "code-analysis", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/vikrant82/repomix-attribution"

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
repomix-attribution = "repomix_attribution.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
